Fixed preview on mobile

--- a/source/stylesheets/portfolio.css.sass
+++ b/source/stylesheets/portfolio.css.sass
@@ -21,8 +21,10 @@
   text-align: center
 
   img
-    max-height: 80%
-    width: 80%
+    max-width: 100%
+    height: auto
+    max-height: 90vh
+    width: auto
     z-index: 12
     cursor: pointer
 
@@ -52,23 +54,21 @@
     color: $color-white
     text-align: left
 
-  .overlay
-    display: table
+  .middle
+    width: 100vw
 
   #prev, #next
-    display: table-cell
-    color: $color-white
+    color: #FFFFFF
     width: 4rem
-    top: 50%
+    padding: 1rem
+    height: 100vh
+    margin-top: 50vh
     font-weight: bold
     font-size: 2rem
-    transform: translateY(-30%)
     &:hover
       color: $color-grey
       cursor: pointer
 
-  .middle
-    padding-top: 10vh
 
 .thumbs
   margin: 0
@@ -300,6 +300,22 @@ blockquote
     display: none
 
 @media (max-width: 72em)
+  #preview
+    .middle
+      order: 2
+      padding-top: 0.5rem
+    .preview-box
+      flex-direction: column
+    #prev, #next
+      order: 1
+      height: 0
+      margin-top: 0
+      font-size: 1rem
+      padding: 0.5rem 0rem 0.5rem 0
+    #close
+      height: 1rem
+      width: 1rem
+      font-size: 1rem
   .portfolio
     display: flex
     flex-direction: column
